# dialogue-rs

./: .gitignore  Cargo.toml  README.md  TODO.md
dialogue-rs/: Cargo.toml
dialogue-rs-cli/: Cargo.toml
dialogue-rs-cli/src/: commands.rs  main.rs
dialogue-rs-cli/src/commands/: check.rs  run.rs
dialogue-rs/src/: lib.rs  script.rs  state_machine.rs  state_tree.rs  syntax.rs  tree.rs
dialogue-rs/src/script/: block.rs  command.rs  comment.rs  element.rs  line.rs  marker.rs  parser.rs
dialogue-rs/src/state_machine/: builder.rs  command_callbacks.rs  events.rs
dialogue-rs/src/state_machine/command_callbacks/: choice.rs  goto.rs  if.rs  say.rs  set.rs  trigger.rs
dialogue-rs/src/syntax/: commands.rs  options.rs
dialogue-rs/src/syntax/commands/: choice.rs  goto.rs  if.rs  say.rs  set.rs  trigger.rs
example-scripts/: capital-of-spain.script  jimi.script  three-line.script
example_scripts/: capital-of-spain.script  daisy-and-luigi.script  jimi.script  three-line.script  two-line.script
invalid-scripts/: choices-mixed-with-other-commands.script
src/: error.rs  lib.rs  script.pest  script.rs  script_v2.rs  scriptv2.pest  utils.rs
src/script/: block.rs  choice.rs  command.rs  comment.rs  element.rs  goto.rs  indented_block.rs  line.rs  marker.rs  parser.rs  say.rs
src/script_v2/: block.rs  command.rs  comment.rs  element.rs  line.rs  marker.rs  parser.rs
test-scripts/: top-level-choices.script
