[package]
name = "dialogue-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
pest = "2.5.7"
pest_derive = "2.5.7"
pretty_assertions = "1.3.0"
thiserror = "1.0.40"
wasm-bindgen = "0.2.84"
