[package]
name = "dialogue-rs"
version = "0.1.0"
edition = "2021"
description = "A Rust library for parsing dialogue scripts."
license = "MIT OR Apache-2.0"
repository = "https://github.com/Velfi/dialogue-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
pest = "2.6"
pest_derive = "2.6"
pretty_assertions = "1.3.0"
thiserror = "1.0.40"
wasm-bindgen = "0.2.84"
