[package]
name = "dialogue-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
itertools = "0.10.5"
once_cell = "1.17.1"
pest = "2.6"
pest_derive = "2.6"
petgraph = "0.6.3"
pretty_assertions = "1.3.0"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
wasm-bindgen = "0.2.84"
